저장 두번 문제 해결

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
     "**/.hg": true,
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
-    "**/node_modules": true
+    "**/output.css": true,
+    "**/node_modules": false
   },
   "files.associations": {
     "*.css": "tailwindcss"
