--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
   },
   "devDependencies": {
     "@tailwindcss/cli": "^4.0.12",
-    "tailwindcss": "^4.0.12",
     "live-server": "^1.2.2",
-    "npm-run-all": "^4.1.5"
-  }
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.12"
+  },
+
+  // .prettierrc
+{
+  "plugins": ["prettier-plugin-tailwindcss"]
+}
 }
